--- a/app/src/main/res/layout/activity_ticket_detail.xml
+++ b/app/src/main/res/layout/activity_ticket_detail.xml
@@ -152,7 +152,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/calendar"
-            />
+            app:tint="@color/black" />
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
